:bug: verified that description text isn't bleeding out

--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,6 +1,6 @@
 .card {
     min-width: 100%;
-    height: 150px;
+    min-height: 150px;
     padding: 30px;
     background-color: #FAF8F3;
     display: flex;
