--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -35,8 +35,8 @@
 }
 
 .footer_logo {
-    width: 40px;
-    height: 40px;
+    max-width: 40px;
+    max-height: 40px;
 }
 
 .footer_left p {
